# Pipeline-Estoque-Medicamentos

./: README.md  pyproject.toml
dados/: estoques.csv  grupos.csv  podutos.csv  produto_estoque.csv  unidades.csv
dashboard/: dashboard.pbix
scripts/: scripts.sql
src/etl_estoque_medicamentos/: conexao.py  insert.py  tempCodeRunnerFile.py  teste_conexao.py
